src/test/deca/context/invalid/classes/class_with_void_field.deca
// Description :
// tentative de déclarer un champ de type void
//
// Resultats :
// Erreur contextuelle
// Ligne 5 : type void interdit pour un champ

class B {
    void v; // doit échouer
}
